# AIMOProofPilot-Solution

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements_container.txt  requirements_local.txt
app/: README.md  run.py  train.py  upload.py
artifacts/: README.md
containers/: README.md  aimo-proof_run_20260611.def  aimo-proof_train_20260611.def
docs/: SETUP_CONTAINER.md  SETUP_LOCAL.md
kaggle/: README.md  aimoproofpilot-submission.ipynb  aimoproofpilot-utils.ipynb
notebook_outputs/: README.md  aimo_notebook_status_1.json  aimo_notebook_status_2.json  aimo_notebook_status_3.json  aimo_notebook_status_4.json  aimo_notebook_status_5.json  aimo_notebook_status_6.json  aimo_proof_outputs_1.txt  aimo_proof_outputs_2.txt  aimo_proof_outputs_3.txt  aimo_proof_outputs_4.txt  aimo_proof_outputs_5.txt  aimo_proof_outputs_6.txt
notebooks/: README.md  submission_v1.ipynb  submission_v2.ipynb  submission_v3.ipynb  submission_v4.ipynb  submission_v5.ipynb  submission_v6.ipynb
reports/: README.md  stage_1.tex  stage_2.tex
src/: README.md
src/aimo_data/: build_dataset.py
src/aimo_inference/: __init__.py  answer.py  client.py  config.py  context.py  defaults.py  harmony.py  io.py  judge.py  page_count.py  profiles.py  prompts.py  refinement.py  sandbox.py  scheduler.py  server.py  template.py  tools.py
src/aimo_training/: __init__.py  artifacts.py  config.py  data.py  diagnostics.py  lora.py  online.py  queue.py  rewards.py  rollout.py  schema.py  tool_rollout.py  trainer.py  trl_trainer.py
src/execution/: upload.py
tests/: README.md  conftest.py  test_aimo_inference_runtime.py
tests/contract/: test_fields_contracts.py
tests/fixtures/: alternative_problem_column.csv  fake_harmony_tool_call.json  fake_judge_response.json  fake_openai_chat_response.json  fake_openai_completion_response.json  mathnet_like_rows.json  proof_input.csv
tests/integration/: test_fake_inference.py  test_grpo_queue.py  test_harmony_tool_loop.py  test_training_dry_run.py
tests/unit/: test_client.py  test_config.py  test_data_builder.py  test_io.py  test_judge.py  test_rewards.py  (+10 more)
utils/: README.md  colab_hf_to_kaggle_olmo_upload.ipynb  rclone_google_drive_oauth.md  upload_contestant_to_drive.ipynb  upload_dummy_to_drive.ipynb  upload_judge_to_drive.ipynb  zip_training_drive_folder.ipynb
(+2 files in other folders)
